--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="lib/normalize-css/normalize.css"/>
+	<link rel="stylesheet" href="src/styles/main.css"/>
 	<title>Title</title>
 </head>
 <body>
